# ksp-lite

./: .gitignore  Cargo.toml  README.md  REFACTOR_NOTES.md
assets/shaders/: atmosphere.wgsl  ocean.wgsl
src/: constants.rs  flight.rs  main.rs  navball.rs  orbit.rs  planet.rs  sim.rs  starfield.rs  vab.rs
