[package]
name = "ksp-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_rapier3d = "0.33.0"

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "png",
  "hdr",
  "x11",
  "tonemapping_luts",
  "default_font",
  "bevy_gizmos",
  "zstd_rust",
]
