[package]
name = "ksp-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "png",
  "hdr",
  "x11",
  "tonemapping_luts",
  "default_font",
  "bevy_gizmos",
]

[dependencies.bevy_rapier3d]
version = "0.28.0"

[dependencies.ordered-float]
version = "4"
